--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_mapa">Map</string>
     <string name="txt_ver_todo">Ver Todo</string>
+    <string name="txt_mapa_satelite">Mapa Satelite</string>
+    <string name="txt_mapa">Mapa Normal</string>
 </resources>
